Correct flex wrap appearance in xl and xxl screen

--- a/Sass_components/_responsive_1200.scss
+++ b/Sass_components/_responsive_1200.scss
@@ -29,6 +29,7 @@
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-evenly;
+        align-items: baseline;
         width: 100%;
         .recipe {
             width: 40%;
